# nadi_node_interconnect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_HSG.markdown  bootstrap.json  vcpkg.json
include/: bootstrap.hpp  config.hpp  context.hpp  core_callbacks.hpp  find_nodes.hpp  management.hpp  message_routing.hpp  nadi.h  node.hpp  node_management.hpp  system_specific.hpp  thread.hpp  thread_queue.hpp  threads.hpp
src/: main.cpp  thread.cpp  threads.cpp
tests/: generator.cpp  printer.cpp
